--- a/quiz/css/style.css
+++ b/quiz/css/style.css
@@ -18,6 +18,9 @@
 #resultatBarre{
     line-height:50px;
 }
+.fauxinput {
+  display:none;
+}
 a:link, a:visited /* visited link */ { 
     text-decoration:none;
     color: #FFFFFF;
