--- a/quiz/css/style.css
+++ b/quiz/css/style.css
@@ -37,7 +37,7 @@ body {
   background: #2f3542;
   color: #dfe4ea;
 }
-body h1 {
+body h1 span {
   margin-bottom: 3rem;
   text-transform: uppercase;
   font-size: 3rem;
@@ -45,7 +45,7 @@ body h1 {
 body h1 span, body h1 i {
   color: #ffa502;
 }
-body h3 {
+body h3 span {
   color: #ffa502;
   font-size: 1.5rem;
 }
